--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -24,20 +24,18 @@
                                 {{ categorie.nomCategorie }}</h5>
                             <p class="card-title">Description :
                                 {{ categorie.description }}</p>
-
-                            <div class="d-flex justify-content-between">
-                                <div class="col-12 mb-4 d-flex align-items-center">
-                                    <i class="bi bi-pencil-square" style="font-size: 25px; margin-right: 9px;"></i>
-                                    <a href="{{ path('app_categorie_edit', {'id_categorie': categorie.id_categorie}) }}" class="btn btn-success custom-btn">Modifier</a>
-                                    <i class="bi bi-trash" style="font-size: 25px; margin-right: 7px;"></i>
-
-                                    <a href="{{ path('app_categorie_delete', {'id_categorie': categorie.id_categorie}) }}" class="btn btn-success custom-btn d-inline-block" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette categorie ?')" id="delete-categorie">
-                                        Supprimer</a>
-                                </div>
-                            </div>
-
-
                         </div>
+                        
+                        <div class="card-footer">
+                            <div class="col-12 mb-4 d-flex justify-content-between">
+                                <i class="bi bi-pencil-square" style="font-size: 25px;"></i>
+                                <a href="{{ path('app_categorie_edit', {'id_categorie': categorie.id_categorie}) }}" class="btn btn-success custom-btn">Modifier</a>
+                                <i class="bi bi-trash" style="font-size: 25px;"></i>
+                                <a href="{{ path('app_categorie_delete', {'id_categorie': categorie.id_categorie}) }}" class="btn btn-success custom-btn d-inline-block" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette categorie ?')" id="delete-categorie">
+                                    Supprimer</a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             {% else %}
