--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>{% block title %} Sailor Bootstrap Template - Index{% endblock %}</title>
+  <title>{% block title %} Elbadli{% endblock %}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!-- Favicons -->
-  <link href="{{asset('Front/img/favicon.png')}}" rel="icon">
-  <link href="{{asset('Front/img/apple-touch-icon.png ')}}" rel="apple-touch-icon">
+  <link href="{{asset('Front/img/elbaldi.jpg')}}" rel="icon">
+  <link href="{{asset('Front/img/elbaldi.jpg')}}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -36,6 +36,27 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 {% endblock %}
+<style>
+  .logo {
+    display: flex;
+    align-items: center;
+  }
+
+  .logo img {
+    width: 50px;
+    margin-right: 20px;
+  }
+
+  .logo a {
+    color: #9a000a; /* Changer la couleur du texte ici */
+    font-size: 36px;
+    font-weight: bold;
+    text-decoration: none;
+  }
+  .custom-logo {
+    max-width: 500%;
+  }
+</style>
 </head>
 
 <body>
@@ -44,13 +65,17 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Elbaldi</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="{{asset('Front/img/logo.png ')}}" alt="" class="img-fluid"></a>-->
+     <h1 class="logo me-auto">
+  <a href="{{path('app_produit_indexFront')}}">
+
+    <img src="{{asset('Front/img/elbaldi.jpg')}}" alt="Logo Elbaldi" class="img-fluid custom-logo">
+    Elbaldi
+  </a>
+</h1>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Profil</a></li>
+          <li><a href="#" class="active">Profil</a></li>
 
            <li><a href="{{path('app_produit_indexFront')}}">Produits</a></li>
           <li><a href="services.html">Bons plans</a></li>
