--- a/templates/categorie/_delete_form.html.twig
+++ b/templates/categorie/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_categorie_delete', {'id_categorie': categorie.id_categorie}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_categorie_delete', {'id_categorie': categorie.id_categorie}) }}" onsubmit="return confirm('Êtes-vous sûr(e) de vouloir supprimer cet élément ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ categorie.id_categorie) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Supprimer</button>
 </form>
