--- a/templates/categorie/edit.html.twig
+++ b/templates/categorie/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="text-center">
-        <h1 style="font-weight: bold;">Modifier Categorie</h1>
+        <h1 style="font-weight: bold;">Modifier Catégorie</h1>
     </div>
 
     {{ include('categorie/_form.html.twig', {'button_label': 'Modifier', 'button_class': 'btn btn-primary custom-btn d-inline-block'}) }}
