--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="text-center">
-        <h1>Ajouter Categorie</h1>
+        <h1>Ajouter Catégorie</h1>
     </div>
     {{ include('categorie/add.html.twig') }}
 
