--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -12,7 +12,7 @@
                 <td>{{ categorie.id_categorie }}</td>
             </tr>
             <tr>
-                <th>Nom categorie</th>
+                <th>Nom catégorie</th>
                 <td>{{ categorie.nomCategorie }}</td>
             </tr>
             <tr>
@@ -22,9 +22,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_categorie_index') }}">back to list</a>
+    <a href="{{ path('app_categorie_index') }}">Retour à la liste des catégories</a>
 
-    <a href="{{ path('app_categorie_edit', {'id_categorie': categorie.id_categorie}) }}">edit</a>
+    <a href="{{ path('app_categorie_edit', {'id_categorie': categorie.id_categorie}) }}">Edit</a>
 
     {{ include('categorie/_delete_form.html.twig') }}
 {% endblock %}
