--- a/templates/command_produit/edit.html.twig
+++ b/templates/command_produit/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('command_produit/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_command_produit_index') }}">back to list</a>
+    <a href="{{ path('app_command_produit_index') }}">Retour à la liste</a>
 
     {{ include('command_produit/_delete_form.html.twig') }}
 {% endblock %}
