--- a/templates/produit/_delete_form.html.twig
+++ b/templates/produit/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_produit_delete', {'ref_Produit': produit.ref_produit}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_produit_delete', {'ref_Produit': produit.ref_produit}) }}" onsubmit="return confirm('Êtes-vous sûr(e) de vouloir supprimer cet élément ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ produit.ref_produit) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Supprimer</button>
 </form>
