--- a/templates/commande/_form.html.twig
+++ b/templates/commande/_form.html.twig
@@ -38,6 +38,6 @@
 
 
 <div class="form-commande">
-	<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+	<button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
 </div>
 {{ form_end(form) }}
