--- a/templates/commande/new.html.twig
+++ b/templates/commande/new.html.twig
@@ -2,11 +2,11 @@
 
 
 {% block title %}
-New Commande
+nouvelle Commande
 {% endblock %}
 {% block body %}
 
-    <h1>Create new Commande</h1>
+    <h1>Ajouter une Commande</h1>
 
     {{ include('commande/_form.html.twig') }}
 
