--- a/templates/livraison/_form.html.twig
+++ b/templates/livraison/_form.html.twig
@@ -25,6 +25,6 @@
 
 
 <div class="form-livraison">
-	<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+	<button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
 </div>
 {{ form_end(form) }}
