--- a/templates/livraison/index.html.twig
+++ b/templates/livraison/index.html.twig
@@ -1,18 +1,18 @@
 
 {% extends 'baseBack.html.twig' %}
 {% block title %}
-Livraison index
+Livraison 
 {% endblock %}
 {% block body %}
-    <h1>Livraison index</h1>
+    <h1>Livraison </h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>IdLivraison</th>
-                <th>StatusLivraison</th>
-                <th>AdresseLivraison</th>
-                <th>DateLivraison</th>
+                <th>Status Livraison</th>
+                <th>Adresse Livraison</th>
+                <th>Date Livraison</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -24,8 +24,8 @@ Livraison index
                 <td>{{ livraison.adresseLivraison }}</td>
                 <td>{{ livraison.dateLivraison ? livraison.dateLivraison|date('Y-m-d') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_livraison_show', {'idLivraison': livraison.idLivraison}) }}">show</a>
-                    <a href="{{ path('app_livraison_edit', {'idLivraison': livraison.idLivraison}) }}">edit</a>
+                    <a href="{{ path('app_livraison_show', {'idLivraison': livraison.idLivraison}) }}">Détails</a>
+                    <a href="{{ path('app_livraison_edit', {'idLivraison': livraison.idLivraison}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -36,5 +36,5 @@ Livraison index
         </tbody>
     </table>
 
-    <a href="{{ path('app_livraison_new') }}">Create new</a>
+    <a href="{{ path('app_livraison_new') }}">Ajouter</a>
 {% endblock %}
