--- a/templates/commande/_form2.html.twig
+++ b/templates/commande/_form2.html.twig
@@ -32,6 +32,6 @@
 <br>
 
 <div class="form-commande">
-	<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+	<button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
 </div>
 {{ form_end(form) }}
