--- a/templates/commande/edit.html.twig
+++ b/templates/commande/edit.html.twig
@@ -3,14 +3,14 @@
 {% extends 'baseBack.html.twig' %}
 
 {% block title %}
-Edit Commande
+Modifier Commande
 {% endblock %}
 {% block body %}
-    <h1>Edit Commande</h1>
+    <h1>Modifier Commande</h1>
 
     {{ include('commande/_form2.html.twig') }}
 
-    <a href="{{ path('app_commande_index') }}">back to list</a>
+    <a href="{{ path('app_commande_index') }}">Retour</a>
 
     {{ include('commande/_delete_form.html.twig') }}
 {% endblock %}
