--- a/templates/commande/thankyou.html.twig
+++ b/templates/commande/thankyou.html.twig
@@ -1,7 +1,7 @@
 {% extends 'baseFront.html.twig' %}
 
 {% block title %}
-	thank you for your order
+	Merci pour votre commande !
 {% endblock %}
 
 {% block body %}
@@ -19,16 +19,17 @@
 			<div class="col-md-6">
 				<div class="card shadow">
 					<div class="card-body">
-						<h1 class="text-center mb-5">Thank You!</h1>
+						<h1 class="text-center mb-5">Merci !</h1>
 						<div class="text-center mb-4">
 							<img src="{{ asset('Back/img/elbaldi.jpg') }}" alt="Thank you" width="1000">
 						</div>
-						<p class="text-center">We've sent the link to your inbox.</p>
+						<p class="text-center">Nous avons envoyé le lien dans votre boîte de réception.
+						</p>
 
 					</div>
 				</div>
 				<div class="text-center mt-5">
-					<a class="btn btn-primary btn-sm">Back Home</a>
+					<a class="btn btn-primary btn-sm">Retour</a>
 				</div>
 			</div>
 		</div>
