--- a/templates/livraison/new.html.twig
+++ b/templates/livraison/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'baseBack.html.twig' %}
 {% block title %}
-New Livraison 
+Nouvelle Livraison 
 {% endblock %}
 {% block body %}
-    <h1>Create new Livraison</h1>
+    <h1>Ajouter une Livraison</h1>
 
     {{ include('livraison/_form.html.twig') }}
 
-    <a href="{{ path('app_livraison_index') }}">back to list</a>
+    <a href="{{ path('app_livraison_index') }}">Retour</a>
 {% endblock %}
