--- a/templates/commande/new.html.twig
+++ b/templates/commande/new.html.twig
@@ -8,6 +8,6 @@ nouvelle Commande
 
     <h1>Ajouter une Commande</h1>
 
-    {{ include('commande/_form.html.twig') }}
-
+{{ include('commande/_form.html.twig', {'orderCount': orderCount}) }}
+    
 {% endblock %}
