--- a/templates/email/newcmd.html.twig
+++ b/templates/email/newcmd.html.twig
@@ -86,7 +86,7 @@
 					<tr>
 						<td colspan="4">
 							<p>Merci de votre confiance en notre entreprise.</p>
-							<p>Cordialement,</p>
+							<p>Cordialement</p>
 							
 							<p class="footer">ElBaldi</p>
 						</td>
