--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -151,7 +151,7 @@
 			<ul class="sidebar-nav" id="sidebar-nav">
 
 				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="quiz.html.twig" ">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('app_commande_dashboard')}}" >
 						<i style="color: #000000;" class="bi bi-house-door-fill"></i>
 						<span>Acceuil</span>
 					</a>
