--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -15,7 +15,7 @@
 
                     <div class="text-center">
                         {% if produit.image is not null %}
-                            <img src="{{ asset('images/' ~ produit.image) }}" class="card-img-top img-fluid mx-auto" style="margin-top: 20px; width: 40%;">
+                            <img src="{{ asset('images/' ~ produit.image) }}" class="card-img-top">
                         {% else %}
                             <img src="{{ asset('images/placeholder.png') }}" class="card-img-top img-fluid mx-auto" style="margin-top: 20px; width: 40%;">
                         {% endif %}
