--- a/templates/quizFront/score.html.twig
+++ b/templates/quizFront/score.html.twig
@@ -1,1 +1,8 @@
-<div>Score : {{ score }}</div>
+{% extends 'baseFront.html.twig' %}
+
+{% block body %}
+
+	<h2>Your score is
+		{{ score }}</h2>
+
+{% endblock %}
