--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -36,12 +36,12 @@
 			href="{{asset('Front/css/style.css')}}" rel="stylesheet">
 
 		<!-- =======================================================
-																																																																								  * Template Name: Sailor
-																																																																								  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-																																																																								  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-																																																																								  * Author: BootstrapMade.com
-																																																																								  * License: https://bootstrapmade.com/license/
-																																																																								  ======================================================== -->
+																																																																										  * Template Name: Sailor
+																																																																										  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+																																																																										  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
+																																																																										  * Author: BootstrapMade.com
+																																																																										  * License: https://bootstrapmade.com/license/
+																																																																										  ======================================================== -->
 		{% endblock %}
 	</head>
 
@@ -50,7 +50,8 @@
 		<!-- ======= Header ======= -->
 		<header id="header" class="fixed-top d-flex align-items-center">
 			<div class="container d-flex align-items-center">
-				<a href="index.html" class="logo me-auto"><img src="{{asset('Back/img/elbaldi.jpg ')}}" alt="" class="img-fluid"></a>
+				<a href="index.html" class="logo me-auto">
+					<img src="{{asset('Back/img/elbaldi.jpg ')}}" alt="" class="img-fluid"></a>
 
 				<h1 class="logo me-auto">
 					<a href="index.html">Elbaldi</a>
@@ -109,8 +110,8 @@
 							<div class="col-lg-6 pt-4 pt-lg-0">
 								<p>
 									Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-																																																																																																																																																																																																																																																																																																																																              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-																																																																																																																																																																																																																																																																																																																																              culpa qui officia deserunt mollit anim id est laborum
+																																																																																																																																																																																																																																																																																																																																									              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+																																																																																																																																																																																																																																																																																																																																									              culpa qui officia deserunt mollit anim id est laborum
 								</p>
 								<ul>
 									<li>
@@ -125,7 +126,7 @@
 								</ul>
 								<p class="fst-italic">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-																																																																																																																																																																																																																																																																																																																																              magna aliqua.
+																																																																																																																																																																																																																																																																																																																																									              magna aliqua.
 								</p>
 							</div>
 						</div>
