--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -23,6 +23,8 @@
   <link href="{{asset('Front/vendor/glightbox/css/glightbox.min.css ')}}" rel="stylesheet">
   <link href="{{asset('Front/vendor/remixicon/remixicon.css ')}}" rel="stylesheet">
   <link href="{{asset('Front/vendor/swiper/swiper-bundle.min.css ')}}" rel="stylesheet">
+     <link rel="stylesheet" href="{{ asset('css/cards.css') }}">
+
 
   <!-- Template Main CSS File -->
   <link href="{{asset('Front/css/style.css')}}" rel="stylesheet">
@@ -62,6 +64,8 @@ body%
 
     </div>
   </header><!-- End Header -->
+ 
+  
 {% block body %}
   <!-- ======= Hero Section ======= -->
   <section id="hero">
