--- a/templates/bonplan/indexFront.html.twig
+++ b/templates/bonplan/indexFront.html.twig
@@ -1,33 +1,82 @@
 {% extends 'baseFront.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/custom.css') }}">
+   <link rel="stylesheet" href="{{ asset('css/cards.css') }}">
+
+   
+{% endblock %}
+
 {% block body %}
+
     <div class="container">
         <h1>Bonplan index</h1>
-
+       
         <hr>
-
-        <div class="row">
-            {% for bonplan in bonplans %}
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img class="card-img-top" src="{{ asset('uploads/'~ bonplan.imageBonplan) }}" alt="{{ bonplan.titreBonplan }}"  >
-                        <div class="card-body">
-                            <h5 class="card-title">{{ bonplan.titreBonplan }}</h5>
-                            <p class="card-text">{{ bonplan.descriptionBonplan }}</p>
-                            <p class="card-text">{{ bonplan.typeBonplan }}</p>
-                            <div class="d-flex justify-content-between">
-                                <a href="{{ path('app_bonplan_show', {'idBonplan': bonplan.idBonplan}) }}" class="btn btn-primary">Voir</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {% else %}
-                <div class="col-md-12">
-                    <div class="alert alert-info" role="alert">
-                        Aucun bon plan disponible.
-                    </div>
-                </div>
-            {% endfor %}
+<div class="nk-widget">
+                                    <div class="nk-widget-content">
+                                        <form action="#" class="nk-form nk-form-style-1" novalidate="novalidate">
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" placeholder="Type something..." id="search" >
+                                                <button class="nk-btn nk-btn-color-main-1"><span class="ion-search"></span><i class="bi bi-search"></i></button>
+                                            </div>
+                                        </form>
+                                        <br>
+                                        <br>
+                                    </div>
+                                </div>
+        <div class="row card-deck">
+            <div class="nk-blog-post nk-blog-post-border-bottom">
+                                    <div class="row vertical-gap" id="all">
+                                            {% include 'bonplan/ajax.html.twig' %}
+                                    </div>
+                                    <div class="row vertical-gap" id="search">
+                                    </div>
+                                </div>
         </div>
     </div>
+    
+    <style>
+        .clamp {
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2; /* number of lines to display */
+            overflow: hidden;
+            text-overflow: ellipsis; /* add ellipsis at the end of the text */
+        }
+    </style>
+
+
+
+    <script
+            src="{{ asset('https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js')}}">
+    </script>
+    <script>
+        $( document ).ready(function() {
+            var currentRequest = null;
+            $("#search").keyup(function(e){
+                /* La variable value va prendre la valeur insérer dans le champ de texte
+                afin d’effectuer la recherche */
+                var value = $(this).val();
+                if(currentRequest != null) {
+                    currentRequest.abort();
+                }
+                /* Ajax est lancé lors du remplissage du champ texte dont l’id est
+                « search » pour faire la recherche */
+                currentRequest = $.ajax({
+                    url : "{{ path('ajaxbonplan') }}",
+                    type : 'GET',
+                    data: {
+                        'searchValue' : value
+                    },
+                    success : function(retour)
+                    {
+                        $('#all').html(retour);
+                    },
+                });
+                return false;
+            });
+        });
+    </script>
 {% endblock %}
