--- a/templates/bonplan/show.html.twig
+++ b/templates/bonplan/show.html.twig
@@ -2,7 +2,8 @@
 
 
 {% block body %}
-    <h1>Bonplan</h1>
+    <h1>Détails de Bonplan</h1>
+    <a href="{{ path('app_bonplan_index') }}" class="btn btn-success mb-3">Retour</a>
 
     <table class="table">
         <tbody>
@@ -29,9 +30,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_bonplan_index') }}">back to list</a>
+  
 
-    <a href="{{ path('app_bonplan_edit', {'idBonplan': bonplan.idBonplan}) }}">edit</a>
+    
 
-    {{ include('bonplan/_delete_form.html.twig') }}
+    
 {% endblock %}
