--- a/templates/bonplan/showFront.html.twig
+++ b/templates/bonplan/showFront.html.twig
@@ -1,10 +1,20 @@
-{% block body %}
-    <h1>Bonplan</h1>
-    <a href="{{ path('app_bonplanFront_show') }}">Retour</a>
+{% extends 'baseFront.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/custom.css') }}">
+   <link rel="stylesheet" href="{{ asset('/css/cards.css') }}">
+   
+{% endblock %}
+{% block body %}
+    <h1>Bonplan</h1> 
+     <a href="{{ path('app_bonplan_indexFront') }}" class="btn btn-success mb-3">Retour</a>
     <table class="table">
-    
         <tbody>
+            <tr>
+                <th>IdBonplan</th>
+                <td>{{ bonplan.idBonplan }}</td>
+            </tr>
             <tr>
                 <th>TitreBonplan</th>
                 <td>{{ bonplan.titreBonplan }}</td>
@@ -24,6 +34,7 @@
         </tbody>
     </table>
 
-    
-
+  
+    <a href="{{ path('app_reservation_new', {'idBonplan': bonplan.idBonplan}) }}" class="btn btn-primary">Reserver</a>
+   
 {% endblock %}
