--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -1,6 +1,20 @@
-{% extends 'baseBack.html.twig' %}
+{% extends 'baseFront.html.twig' %}
 
 {% block body %}
+<style>
+.my-custom-class{
+    color: red;
+}
+#reservation{
+   display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: stretch;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid;
+}
+</style>
     <h1>Ajouter une réservation</h1>
 <a href="{{ path('app_reservation_index') }}" class="btn btn-success mb-3">Retour</a>
 
