--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -156,11 +156,23 @@
 						<span>Acceuil</span>
 					</a>
 				</li>
+				<li class="nav-item">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{ path('listAgent') }}">
+					<i style="color: #000000;" class="bi bi-house-door-fill"></i>
+					<span>List Agent</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{ path('listClient') }}">
+					<i style="color: #000000;" class="bi bi-house-door-fill"></i>
+					<span>List Client</span>
+					</a>
+				</li>
 				<!-- End Dashboard Nav -->
 
 
 				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="produit-nav" href="{{path('app_produit')}}">
+					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="produit-nav">
 						<i style="color: #000000;" class="bi bi-shop"></i>
 						<span>Produits</span>
 					</a>
