--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -90,7 +90,7 @@
 							<a href="{{path('app_produit_indexFront')}}">Produits</a>
 						</li>
 						<li>
-							<a href="services.html">Bons plans</a>
+							<a href="{{path('app_bonplan_indexFront')}}">Bons plans</a>
 						</li>
 						<li>
 							<a href="portfolio.html">Evènements</a>
